--- a/custom_components/combined_notifications/manifest.json
+++ b/custom_components/combined_notifications/manifest.json
@@ -4,6 +4,7 @@
   "version": "2.0.0",
   "documentation": "https://github.com/Pjarbit/home-assistant-combined-notification-integration",
   "issue_tracker": "https://github.com/Pjarbit/home-assistant-combined-notification-integration/issues",
+  "config_flow": true,
   "dependencies": [],
   "codeowners": ["@Pjarbit"],
   "requirements": []
