--- a/custom_components/combined_notifications/manifest.json
+++ b/custom_components/combined_notifications/manifest.json
@@ -1,7 +1,7 @@
 {
   "domain": "combined_notifications",
   "name": "Combined Notifications",
-  "version": "2.0.0",
+  "version": "v2.0.1",
   "documentation": "https://github.com/Pjarbit/home-assistant-combined-notification-integration",
   "issue_tracker": "https://github.com/Pjarbit/home-assistant-combined-notification-integration/issues",
   "config_flow": true,
