--- a/custom_components/combined_notifications/manifest.json
+++ b/custom_components/combined_notifications/manifest.json
@@ -1,4 +1,5 @@
 {
+  "domain": "combined_notifications",
   "name": "Combined Notifications",
   "version": "3.1.3b",
   "documentation": "https://github.com/Pjarbit/home-assistant-combined-notification-integration",
