--- a/custom_components/combined_notifications/manifest.json
+++ b/custom_components/combined_notifications/manifest.json
@@ -1,11 +1,12 @@
 {
   "domain": "combined_notifications",
   "name": "Combined Notifications",
-  "version": "3.1.7b",
+  "version": "3.1.9b",
   "documentation": "https://github.com/Pjarbit/home-assistant-combined-notification-integration",
   "issue_tracker": "https://github.com/Pjarbit/home-assistant-combined-notification-integration/issues",
   "config_flow": true,
   "dependencies": [],
   "codeowners": ["@Pjarbit"],
-  "requirements": []
+  "requirements": [],
+  "iot_class": "local_polling"
 }
