--- a/.github/workflows/hacs.yaml
+++ b/.github/workflows/hacs.yaml
@@ -14,5 +14,4 @@ jobs:
       - uses: actions/checkout@v4
       - name: HACS Action
         uses: hacs/action@main
-        with:
-        category: integration
+      - category: "integration"
